[project]
name = "inky-dash"
version = "4.3.0"
description = "Inky dash is an interface for Inky displays, a line of e-paper displays for the Raspberry Pi, that can be accessed from a browser via a local web server."
authors = [{ name = "Robert", email = "<robert@rrayns.co.uk>" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "colorama>=0.4.6",
  "dependency-injector>=4.48.3",
  "flask>=3.1.2",
  "flask-cors>=6.0.2",
  "gunicorn>=23.0.0",
  "inky>=2.2.1",
  "pillow>=12.1.0",
  "pydantic>=2.12.5",
  "requests>=2.32.5",
  "werkzeug>=3.1.7",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.17.0",
  "pyright>=1.1.408",
  "pytest>=8.2.0",
  "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120
